fixed some var names and spacing

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -9,7 +9,3 @@
 h2 {
 	text-align: center;
 }
-
-.container {
-
-}
